--- a/index.html
+++ b/index.html
@@ -4,9 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
     <title>Landing page</title>
 </head>
 <body>
+    <!-- header -->
+    <header>
+        <nav>
+            <div class="logo">Header Logo</div>
+            <ul>
+                <li>Header link one</li>
+                <li>Header link two</li>
+                <li>Header link three</li>
+            </ul>
+        </nav>
+        <section class="section-header">
+            <div class="left">
+                <h1  class="title">This Website is Awesome</h1>
+                <p class="text-awesome">This Website has some subtext that goes here under the
+                    main title. It's a smaller font and the color is lower
+                    contrast
+                </p>
+                <button>Sign up</button>
+            </div>
+            <div  >
+                <img class="right"src="images/placeholder.png" alt="wallpaper image">
+            </div>
     
+        </section>
+    </header>
+    <section class="random-stuff">
+        <h2 class="sub-title">Some Random Information </h2>
+
+        <div class="container-cards">
+            <div class="card">
+            <img src="images/1.jpg" alt="lofi art">
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+            <img src="images/2.jpg" alt="lofi art">
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+            <img src="images/3.jpg" alt="lofi art">
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+            <img src="images/4.jpg" alt="lofi art">
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+        </div>  
+    </section>
+    <section class="quote">
+        <div class="citation">
+            <p class="text">This is a powerful message, or a reflection from a leader. Maybe it's just adding some flair, or maybe people will genuinely enjoy it. Who can tell? all I see is that it feels great.</p>
+            <p class="name">-Zeus, King of the Gods"</p>
+        </div>
+    </section>
+    <!--Call to action button-->
+    <section class="call">
+        <div class="call-action">
+            <div class="blue-call">
+                <h2>Call to action! it's time</h2>
+                <p>sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>sign up</button>
+        </div>
+
+    </section>
+    
+    <footer>
+        <p>Copyright © The Odin Project 2024</p>
+    </footer>
 </body>
 </html>
